k8s/chess_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        tier: backend
        track: stable
    spec:
      containers:
      - name: backend
        image: "udvaridonat/donat-chess:backend"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
