k8s/chess_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  selector:
    matchLabels:
      app: postgre
      tier: postgre
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: postgre
        tier: postgre
        track: stable
    spec:
      containers:
      - name: postgre
        image: "postgres:9.3"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5432
