k8s/chess_backend_s.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
