k8s/chess_frontend_s.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
    tier: frontend
  ports:
  - protocol: TCP
    port: 4200
    targetPort: http
    nodePort: 32123
  type: NodePort
