k8s/chess_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chess-ingress
  annotations:  
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - host: minikube
   http:
     paths:       
     - path: /?(.*)
       backend:
         serviceName: frontend
         servicePort: 4200
     - path: /api/?(.*)
       backend:
         serviceName: backend
         servicePort: 8080
