k8s/chess_ingress_be.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chess-ingress-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 rules:
 - host: minikube
   http:
     paths:     
     - path: /api/?(.*)
       backend:
         serviceName: backend
         servicePort: 8080
